--- a/css/penjat.css
+++ b/css/penjat.css
@@ -6,5 +6,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 
 #banderes { position: relative; top: -337px; left: 350px; }
 
+#ahorcado { position: relative; top: -280px; left: 200px; }
+
+#caminar { position: relative; top: -500px; left: 300px; }
+
+#rotar { position: relative; top: -538px; left: 460px; }
+
+
+
+
+
 
 
