--- a/css/penjat.css
+++ b/css/penjat.css
@@ -2,6 +2,10 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this template
 */
+body {
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+}
 #imatges { position:relative; top: -300px; left: 318px; }
 
 #banderes { position: relative; top: -337px; left: 350px; }
