--- a/css/penjat.css
+++ b/css/penjat.css
@@ -12,9 +12,11 @@ body {
 
 #ahorcado { position: relative; top: -280px; left: 200px; }
 
-#caminar { position: relative; top: -500px; left: 300px; }
+#caminar { position: relative; top: -270px; left: 300px; }
 
 #rotar { position: relative; top: -538px; left: 460px; }
+
+#moix { position: relative; top: -390px; left: 310px; }
 
 
 
